chore: gradle cache 추가 feature: 1. ranking - redis 연동 2. ActivityLog EventLister 추가 refactor: responseDto 통일